--- a/.github/workflows/reusable-terraform.yaml
+++ b/.github/workflows/reusable-terraform.yaml
@@ -65,8 +65,9 @@ jobs:
             terraform init \
               -backend-config="bucket=${{ inputs.aws-statefile-s3-bucket }}" \
               -backend-config="region=${{ inputs.aws-region }}" \
+              -backend-config="key=${dir}/terraform.tfstate"
             
-            terraform destroy -var-file=../inventories/${{ inputs.aws-environment }}/terraform.tfvars -auto-approve
+            terraform destroy -var-file=./inventories/${{ inputs.aws-environment }}/terraform.tfvars -auto-approve
             
             cd ../..
           done
@@ -90,7 +91,7 @@ jobs:
               TF_VAR_container_image_tag=${{ env.IMAGE_TAG }}
             fi
             
-            terraform plan -var-file=../inventories/${{ inputs.aws-environment }}/terraform.tfvars -out=tfplan
+            terraform plan -var-file=./inventories/${{ inputs.aws-environment }}/terraform.tfvars -out=tfplan
             terraform apply -auto-approve tfplan
             
             # Upload frontend files if this is the frontend module
@@ -108,7 +109,7 @@ jobs:
         run: |
           cd 02-backend/app
           
-          ECR_REPOSITORY="${{ secrets.aws-account-id }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/sioeuzal-${{ inputs.aws-environment }}"
+          ECR_REPOSITORY="${{ secrets.aws-account-id }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/sioeuzal-${{ secrets.aws-account-id }}"
           
           # Login to ECR
           aws ecr get-login-password --region ${{ inputs.aws-region }} | \
