fix: order destroy

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -2,6 +2,9 @@ name: "Terraform Deploy - Dev"
 
 on:
   push:
+    paths-ignore:
+      - '**/*.md'
+      - 'README.md'
 
 permissions:
   id-token: write
